--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "c8 mocha test.js",
-    "posttest": "standard"
+    "posttest": "standard",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "c8": "^3.4.0",
     "chai": "^4.2.0",
     "mocha": "^6.0.1",
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "standard-version": "^5.0.0"
   }
 }
